* 2007-10-10 - thorben.betten@open-xchange.com

 - Bugfix #9751: Fixed non-appearing shared mail folders
 - Bugfix #9750: Avoid annoying error logging whenever an ACL entity cannot
   be mapped to system user

* 2007-10-08 - thorben.betten@open-xchange.com

 - Bugfix #9728: Proper check of intial ACls on mail folder creation

* 2007-10-05 - thorben.betten@open-xchange.com

 - Bugfix #9515: Additional check for user's module access prior to
   updating virtual list folders
 - Bugfix #9664: Fixed reges to check against IMAP folder's user flag
   support
 - Bugfix #9699: Removing only known entities from an IMAP folder's ACLs on
   update/create operation

* 2007-09-26 - marcus.klein@open-xchange.com

 - Bugfix #9638: Renaming infostore user folder if user is deleted.

* 2007-09-17 - martin.kauss@open-xchange.com

 - Fixed bug #9497. Recurring appointments with a start before 1970 caused a
   NullPointer by viewing the detail page of a single occurrence. This has been
   fixed.

* 2007-09-17 - marcus.klein@open-xchange.com

 - Bugfix #9475: Improved VCardTokenizer to use byte arrays instead of Byte
   lists.

* 2007-09-14 - ben.pahne@open-xchange.com

 - Fixed Bug #9466 - User was able to move his
   contact out of the global address book.

* 2007-09-13 - marcus.klein@open-xchange.com

 - Bugfix #8935: Fixing once again another case breaking AJAX communication.
 - Bugfix #9445: Added handling for folders that are only visible.

* 2007-09-13 - ben.pahne@open-xchange.com

 - Fixed Bug #6335 - Check for bad characters impletemented

* 2007-09-12 - marcus.klein@open-xchange.com

 - Bugfix #9409: Reimplemented bugfix for bug 8935 to prevent this problem.

* 2007-09-12 - thorben.betten@open-xchange.com

 - Bugfix #9407: Using a thread-safe implementation of java.util.Map in
   IMAP connection watcher

* 2007-09-12 - ben.pahne@open-xchange.com

 - Fixed Bug 9224: Display Name / File as not synchronized to Outlook

* 2007-09-12 - francisco.laguna@open-xchange.com
